crates/polylint-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_mustache.snap
---
source: crates/polylint-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"list.mustache\", Language::Mustache,\nKNOWN_UNFORMATTED_MUSTACHE)"
---
<html>
  <head><title>{{title}}</title></head>
  <body><p class="greeting">{{message}}</p></body>
</html>
