crates/polylint-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_vento.snap
---
source: crates/polylint-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"layout.vto\", Language::Vento, KNOWN_UNFORMATTED_VENTO)"
---
<html>
  <body>
    <p>{{ title }}</p>
    <ul>{{ for item of items }}<li>{{ item }}</li>{{ /for }}</ul>
  </body>
</html>
