crates/polylint-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_vue.snap
---
source: crates/polylint-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"App.vue\", Language::Vue, KNOWN_UNFORMATTED_VUE)"
---
<template><div class="box"><Button :label="title" @click="onClick">Go</Button></div></template>
