crates/polylint-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_xml.snap
---
source: crates/polylint-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"config.xml\", Language::Xml, KNOWN_UNFORMATTED_XML)"
---
<?xml version="1.0" encoding="UTF-8"?>
<root>
  <child attr="value">text content</child>
  <empty />
</root>
